# dora

./: .gitignore  Makefile  README.md  poetry.toml  pyproject.toml  setup.cfg
.github/workflows/: ci.yaml
dora/: __init__.py  __main__.py  ansi.py  ansi_colors.py  main.py  options.py  search.py
dora/mypy_legacy/: __init__.py  traverser.py
tests/: test.py
tests/codebase/: main.py  new_type_syntax.py  test.py
tests/codebase/subfolder/: test2.py
tests/records/: Given -h flag, help should be shown  Given directory, all files should be analyzed recursively  Given duplicated pathes, mypy error expected  Given no args, usage should be shown  Given non-existing file, error should be shown  New type syntax with --show-mypy-errors flag  New type syntax with --show-mypy-errors flag and mypy incomplete feature enabled via -- args  New type syntax without --show-mypy-errors flag  Search for `builtins.str`  Search for `def (a: builtins.int, b: builtins.int) -> builtins.str`  With --no-color flag output should not contain ansi colors  Without specified type expression, all types should be displayed
tests/results/: Given extra args, help should be shown  Given no args help should be shown  Given no args help, should be shown  Given no args, help should be shown  Given non-existing file, error should be shown  Given path only, all types should be displayed  Search for builtins.str
