[tool.poetry]
name = "dora"
version = "0.1.0"
description = "Search Python code by type expressions"
authors = ["Mihail Butvin <butvin.mihail@yandex.ru>"]
readme = "README.md"

[tool.poetry.scripts]
dora = "dora.main:main"

[tool.poetry.dependencies]
# We use mypy internal functionality, not the public API, so changes in both mypy or python can lead to breaking our code
python = "~3.12"
mypy = "^1.11.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
